--- a/css/styles.css
+++ b/css/styles.css
@@ -11,3 +11,13 @@ dark green: #28b485 */
     padding: 0;
     box-sizing: border-box; 
 }
+
+/*projectwise font definition goes to body, which gets inherited */
+body{
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.7;
+    color: #777;
+    
+}
