--- a/css/styles.css
+++ b/css/styles.css
@@ -19,5 +19,12 @@ body{
     font-size: 16px;
     line-height: 1.7;
     color: #777;
-    
+
+}
+
+.header{
+    height: 95vh;
+    background-image: linear-gradient( to right bottom,#7ed56f9a, #28b48594 ) , url('../img/hero.jpg');
+    background-size: cover;
+    background-position: top;
 }
