--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ body{
     font-size: 16px;
     line-height: 1.7;
     color: #777;
+    padding: 15px;
 
 }
 
@@ -27,4 +28,166 @@ body{
     background-image: linear-gradient( to right bottom,#7ed56f9a, #28b48594 ) , url('../img/hero.jpg');
     background-size: cover;
     background-position: top;
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+    position: relative;
+}
+
+.logo-box{
+    position: absolute;
+    top: 40px;
+    left: 40px;
+    animation: logoAnimation 2s ease-in-out;
+}
+
+.logo{
+    height: 35px;
+}
+.text-box{
+    position: absolute;
+    top:40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.heading-primary{
+    color:#fff;
+    text-transform: uppercase;
+    margin-bottom: 60px;
+}
+.heading-primary-main{
+    display:block;
+    font-size: 60px;
+    font-weight: 400;
+    letter-spacing: 35px;
+    animation: moveInLeft 2s ease-in-out;
+    animation-delay: .5s;
+    animation-fill-mode: backwards;
+
+}
+.heading-primary-sub{
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 17.4px;
+    animation: moveInRight 2s ease-in-out;
+    animation-delay: .5s;
+    animation-fill-mode: backwards;
+
+}
+
+
+@keyframes moveInLeft {
+    0%{
+        opacity: 0;
+        transform: translateX(-200px);
+    }
+    80%{
+        opacity: .8;
+        transform: translateX(50px);
+    }
+
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes moveInRight {
+    0%{
+        opacity: 0;
+        transform: translateX(200px);
+    }
+    80%{
+        opacity: .8;
+        transform: translateX(-50px);
+    }
+
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes logoAnimation{
+    0%{
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+    80%{
+        opacity: .8;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes btnAnimation{
+    0%{
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    80%{
+        opacity: .8;
+        transform: translateY(-20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.btn{
+
+}
+
+.btn:link, .btn:visited{
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 25px;
+    transition: .2s all ease-in-out;
+    position: relative;
+}
+.btn:hover{
+    transform: translateY(-4px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+}
+.btn:active{
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
+
+.btn-white{
+    background-color: #fff;
+    color: #777;    
+}
+
+.btn::after{
+    content: "";
+    display:inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 25px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: .4s all;
+
+}
+.btn-white::after{
+    background-color: #fff;
+}
+.btn:hover::after{
+    transform: scale(5, 1.4);
+    opacity: 0;
+}
+
+.btn-animated{
+    animation: btnAnimation 1s ease-out .75s;
+    animation-fill-mode: backwards;
 }
