--- a/css/styles.css
+++ b/css/styles.css
@@ -9,17 +9,22 @@ dark green: #28b485 */
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
+    box-sizing: inherit; 
+}
+/* for using the relative unit: 1rem = 10px */
+html{
+    font-size: 62.5%;
 }
 
 /*projectwise font definition goes to body, which gets inherited */
 body{
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 1.7;
     color: #777;
-    padding: 15px;
+    padding: 1.5rem;
+    box-sizing: border-box; 
 
 }
 
@@ -32,17 +37,17 @@ body{
     position: relative;
 }
 
-.logo-box{
+.header__logo-box{
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
     animation: logoAnimation 2s ease-in-out;
 }
 
-.logo{
-    height: 35px;
+.header__logo{
+    height: 3.5rem;
 }
-.text-box{
+.header__text-box{
     position: absolute;
     top:40%;
     left: 50%;
@@ -53,23 +58,23 @@ body{
 .heading-primary{
     color:#fff;
     text-transform: uppercase;
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
 }
-.heading-primary-main{
+.heading-primary--main{
     display:block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
     animation: moveInLeft 2s ease-in-out;
     animation-delay: .5s;
     animation-fill-mode: backwards;
 
 }
-.heading-primary-sub{
+.heading-primary--sub{
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17.4px;
+    letter-spacing: 1.74rem;
     animation: moveInRight 2s ease-in-out;
     animation-delay: .5s;
     animation-fill-mode: backwards;
@@ -80,11 +85,11 @@ body{
 @keyframes moveInLeft {
     0%{
         opacity: 0;
-        transform: translateX(-200px);
+        transform: translateX(-20rem);
     }
     80%{
         opacity: .8;
-        transform: translateX(50px);
+        transform: translateX(5rem);
     }
 
     100%{
@@ -96,11 +101,11 @@ body{
 @keyframes moveInRight {
     0%{
         opacity: 0;
-        transform: translateX(200px);
+        transform: translateX(20rem);
     }
     80%{
         opacity: .8;
-        transform: translateX(-50px);
+        transform: translateX(-505rempx);
     }
 
     100%{
@@ -112,11 +117,11 @@ body{
 @keyframes logoAnimation{
     0%{
         opacity: 0;
-        transform: translateY(-100px);
+        transform: translateY(-10rem);
     }
     80%{
         opacity: .8;
-        transform: translateY(20px);
+        transform: translateY(2rem);
     }
     100% {
         opacity: 1;
@@ -127,11 +132,11 @@ body{
 @keyframes btnAnimation{
     0%{
         opacity: 0;
-        transform: translateY(100px);
+        transform: translateY(10rem);
     }
     80%{
         opacity: .8;
-        transform: translateY(-20px);
+        transform: translateY(-2rem);
     }
     100% {
         opacity: 1;
@@ -146,22 +151,23 @@ body{
 .btn:link, .btn:visited{
     text-decoration: none;
     text-transform: uppercase;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 25px;
+    border-radius: 2.5rem;
     transition: .2s all ease-in-out;
     position: relative;
+    font-size: 1.6rem;
 }
 .btn:hover{
     transform: translateY(-4px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
 }
 .btn:active{
     transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
 }
 
-.btn-white{
+.btn--white{
     background-color: #fff;
     color: #777;    
 }
@@ -171,7 +177,7 @@ body{
     display:inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 25px;
+    border-radius: 2.5rem;
     position: absolute;
     top: 0;
     left: 0;
@@ -179,7 +185,7 @@ body{
     transition: .4s all;
 
 }
-.btn-white::after{
+.btn--white::after{
     background-color: #fff;
 }
 .btn:hover::after{
@@ -187,7 +193,7 @@ body{
     opacity: 0;
 }
 
-.btn-animated{
+.btn--animated{
     animation: btnAnimation 1s ease-out .75s;
     animation-fill-mode: backwards;
 }
