--- a/css/styles.css
+++ b/css/styles.css
@@ -2,198 +2,158 @@
 light green : #7ed56f
 medium green : #55c57a
 dark green: #28b485 */
-
-
 /* basic reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit; 
-}
 /* for using the relative unit: 1rem = 10px */
-html{
-    font-size: 62.5%;
-}
+html {
+  font-size: 62.5%; }
 
 /*projectwise font definition goes to body, which gets inherited */
-body{
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 1.7;
-    color: #777;
-    padding: 1.5rem;
-    box-sizing: border-box; 
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.7;
+  color: #777;
+  padding: 1.5rem;
+  box-sizing: border-box; }
 
-}
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, #7ed56f9a, #28b48594), url("../img/hero.jpg");
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  position: relative; }
 
-.header{
-    height: 95vh;
-    background-image: linear-gradient( to right bottom,#7ed56f9a, #28b48594 ) , url('../img/hero.jpg');
-    background-size: cover;
-    background-position: top;
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-    position: relative;
-}
+.header__logo-box {
+  position: absolute;
+  top: 4rem;
+  left: 4rem;
+  animation: logoAnimation 2s ease-in-out; }
 
-.header__logo-box{
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-    animation: logoAnimation 2s ease-in-out;
-}
+.header__logo {
+  height: 3.5rem; }
 
-.header__logo{
-    height: 3.5rem;
-}
-.header__text-box{
-    position: absolute;
-    top:40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
+.header__text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; }
 
-.heading-primary{
-    color:#fff;
-    text-transform: uppercase;
-    margin-bottom: 6rem;
-}
-.heading-primary--main{
-    display:block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation: moveInLeft 2s ease-in-out;
-    animation-delay: .5s;
-    animation-fill-mode: backwards;
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  margin-bottom: 6rem; }
 
-}
-.heading-primary--sub{
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.74rem;
-    animation: moveInRight 2s ease-in-out;
-    animation-delay: .5s;
-    animation-fill-mode: backwards;
+.heading-primary--main {
+  display: block;
+  font-size: 6rem;
+  font-weight: 400;
+  letter-spacing: 3.5rem;
+  animation: moveInLeft 2s ease-in-out;
+  animation-delay: .5s;
+  animation-fill-mode: backwards; }
 
-}
-
+.heading-primary--sub {
+  display: block;
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: 1.74rem;
+  animation: moveInRight 2s ease-in-out;
+  animation-delay: .5s;
+  animation-fill-mode: backwards; }
 
 @keyframes moveInLeft {
-    0%{
-        opacity: 0;
-        transform: translateX(-20rem);
-    }
-    80%{
-        opacity: .8;
-        transform: translateX(5rem);
-    }
-
-    100%{
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
+  0% {
+    opacity: 0;
+    transform: translateX(-20rem); }
+  80% {
+    opacity: .8;
+    transform: translateX(5rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
 
 @keyframes moveInRight {
-    0%{
-        opacity: 0;
-        transform: translateX(20rem);
-    }
-    80%{
-        opacity: .8;
-        transform: translateX(-505rempx);
-    }
-
-    100%{
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-@keyframes logoAnimation{
-    0%{
-        opacity: 0;
-        transform: translateY(-10rem);
-    }
-    80%{
-        opacity: .8;
-        transform: translateY(2rem);
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes btnAnimation{
-    0%{
-        opacity: 0;
-        transform: translateY(10rem);
-    }
-    80%{
-        opacity: .8;
-        transform: translateY(-2rem);
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-.btn{
-
-}
-
-.btn:link, .btn:visited{
-    text-decoration: none;
-    text-transform: uppercase;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 2.5rem;
-    transition: .2s all ease-in-out;
-    position: relative;
-    font-size: 1.6rem;
-}
-.btn:hover{
-    transform: translateY(-4px);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
-}
-.btn:active{
-    transform: translateY(-1px);
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-}
-
-.btn--white{
-    background-color: #fff;
-    color: #777;    
-}
-
-.btn::after{
-    content: "";
-    display:inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 2.5rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: .4s all;
-
-}
-.btn--white::after{
-    background-color: #fff;
-}
-.btn:hover::after{
-    transform: scale(5, 1.4);
+  0% {
     opacity: 0;
-}
+    transform: translateX(20rem); }
+  80% {
+    opacity: .8;
+    transform: translateX(-505rempx); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
 
-.btn--animated{
-    animation: btnAnimation 1s ease-out .75s;
-    animation-fill-mode: backwards;
-}
+@keyframes logoAnimation {
+  0% {
+    opacity: 0;
+    transform: translateY(-10rem); }
+  80% {
+    opacity: .8;
+    transform: translateY(2rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
+
+@keyframes btnAnimation {
+  0% {
+    opacity: 0;
+    transform: translateY(10rem); }
+  80% {
+    opacity: .8;
+    transform: translateY(-2rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
+
+.btn:link, .btn:visited {
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: 2.5rem;
+  transition: .2s all ease-in-out;
+  position: relative;
+  font-size: 1.6rem; }
+
+.btn:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.btn--white {
+  background-color: #fff;
+  color: #777; }
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 2.5rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: .4s all; }
+
+.btn--white::after {
+  background-color: #fff; }
+
+.btn:hover::after {
+  transform: scale(5, 1.4);
+  opacity: 0; }
+
+.btn--animated {
+  animation: btnAnimation 1s ease-out .75s;
+  animation-fill-mode: backwards; }
