--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,13 @@ light green : #7ed56f
 medium green : #55c57a
 dark green: #28b485 */
 
+// variables
+$color-primary-light: #7ed56f;
+$color-primary:#55c57a; 
+$color-primary-dark: #28b485;
+$color-white: #fff;
+$color-light-grey: #777;
+  
 
 /* basic reset */
 
@@ -22,9 +29,10 @@ body{
     font-weight: 400;
     font-size: 1.6rem;
     line-height: 1.7;
-    color: #777;
+    color: $color-light-grey;
     padding: 1.5rem;
     box-sizing: border-box; 
+     
 
 }
 
@@ -34,7 +42,7 @@ body{
     background-size: cover;
     background-position: top;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-    position: relative;
+    position: relative;  
 }
 
 .header__logo-box{
@@ -56,7 +64,7 @@ body{
 }
 
 .heading-primary{
-    color:#fff;
+    color:$color-white;
     text-transform: uppercase;
     margin-bottom: 6rem;
 }
@@ -168,8 +176,8 @@ body{
 }
 
 .btn--white{
-    background-color: #fff;
-    color: #777;    
+    background-color: $color-white;
+    color: $color-light-grey;    
 }
 
 .btn::after{
@@ -186,7 +194,7 @@ body{
 
 }
 .btn--white::after{
-    background-color: #fff;
+    background-color: $color-white;
 }
 .btn:hover::after{
     transform: scale(5, 1.4);
