--- a/css/styles.css
+++ b/css/styles.css
@@ -206,6 +206,7 @@ body{
   margin-top: -25vh;
   background-color: #f7f7f7;
   padding-top: 35vh;
+  padding-bottom: 35vh;;
 }
 .u-center-text{
     text-align: center;
@@ -254,6 +255,16 @@ body{
 
 .col-1-of-4:not(:last-child){
     margin-right:5rem;
+}
+
+.col-1-of-3{
+    width: 30%;
+    float:left;
+    
+}
+
+.col-1-of-3:not(:last-child){
+    margin-right:5%;
 }
 .heading-tertiary{
     font-size: 1.6rem;
@@ -331,6 +342,7 @@ body{
     background-image: linear-gradient( to right bottom,#7ed56f9a, #28b48594 ) , url('../img/nat-4.jpg');
     background-size: cover;
     clip-path: polygon(0 15vh, 100% 0, 100% 85vh, 0 100%);
+    margin-top: -25vh;
 }
 .feature-box{
     background-color: rgba(255, 255, 255, .8);
@@ -357,3 +369,156 @@ body{
 .feature-box__text{
     padding-bottom: 3rem;
 }
+
+/* SECTION TOURS  */
+.section-tours{
+    background-color: #f7f7f7;
+    margin-top: -30vh;
+    padding-top: 32vh ;
+    
+}
+.card{
+     height: 52rem;
+     background-color: #fff;
+     box-shadow: 0 .5rem 2.5rem rgba(0, 0, 0, .3);
+    border-radius: 3px;
+    overflow: hidden;
+    position: relative;
+}
+
+
+.card__picture{
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: multiply;
+    clip-path: polygon(0 0 , 100% 0, 100% 85%, 0 100%);
+}
+.card__picture--1{
+    
+    background-image:linear-gradient( to right ,#ffb900, #ff7730 ) ,url(../img/nat-5.jpg);
+   
+}
+.card__picture--2{
+    
+    background-image: url(../img/nat-6.jpg);
+    background-image:linear-gradient( to right ,#7ed56fe1, #28b485cc ) ,url(../img/nat-6.jpg);
+
+}
+.card__picture--3{
+    
+    
+    background-image:linear-gradient( to right ,#2998ffc0, #5543fabb ) ,url(../img/nat-7.jpg);
+}
+.card__heading{
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: #fff;
+    display: inline;
+    position: absolute;
+    top: 12rem;
+    right:2rem;
+    text-align: right; 
+    z-index: 5;
+    
+}
+.card__heading-span{
+    padding:1rem 1.5rem;
+    box-decoration-break:clone ;
+}
+.card__heading-span--yellow{
+    background: linear-gradient( to right ,#ffbb00c5, #ff7830c4 );
+}
+
+.card__heading-span--yellow:hover{
+    background: linear-gradient( to right ,#ffbb00dc, #ff7830dc );
+}
+.card__heading-span--green{
+    background: linear-gradient( to right ,#7ed56fe1, #28b485cc );
+}
+.card__heading-span--green:hover{
+    background: linear-gradient( to right ,#7ed56fef, #28b485e7 );
+}
+.card__heading-span--blue{
+    background: linear-gradient( to right ,#2998ffc0, #5543fabb );
+}
+.card__heading-span--blue:hover{
+    background: linear-gradient( to right ,#2998ffe3, #5543fae3 );
+}
+
+
+
+.card__details{
+
+}
+.card__details ul{
+    list-style: none;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.card__details li{
+    text-align: center;
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+.card__details li:not(:last-child){
+    border-bottom: 1px solid #eee;
+}
+.card__details li:last-child{
+    
+    display: inline-block;
+    margin-left: 15.5rem;
+}
+.btn-text{
+    font-size: 1.6rem;
+    text-decoration: none;
+    padding: 5px;
+    transition: all .2s;   
+}
+.btn-text:hover{
+    
+    color: #fff;
+    transform: translateX(-2px);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+}
+.btn-text:active{
+   
+    transform: translateX(-2px);
+    box-shadow: 0 1.5rem 1.5rem rgba(0, 0, 0, .5);
+}
+.btn-text-orange{
+    color: #ff7830dc;
+    border-bottom: 2px solid #ff7830dc;
+}
+.btn-text-orange:hover{
+    background: #ff7830dc;
+    border-bottom: 2px solid #ff7830dc;
+}
+.btn-text-green{
+    color:#28b485;
+    border-bottom: 2px solid #28b485;
+}
+.btn-text-green:hover{
+    background: #28b485;
+    border-bottom: 2px solid #28b485;
+}
+.btn-text-blue{
+    color:#5643fa;
+    border-bottom: 2px solid #5643fa;
+}
+.btn-text-blue:hover{
+    background: #5643fa;
+    border-bottom: 2px solid #5643fa;
+}
+
+
+
+/*
+#ffb900 - color orange light
+#ff7730 = color orange dark
+
+#2998ff color blue light
+#5643fa color blue dark
+*/
+
