--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,10 @@ body{
     background-color: #fff;
     color: #777;    
 }
+.btn--green{
+    background-color: #7ed56f9a;
+    color: #777;    
+}
 
 .btn::after{
     content: "";
@@ -287,6 +291,17 @@ body{
 .paragraph:not(:last-child){
     margin-bottom: 3rem;
 }
+.btn-text{
+    border: none;
+    cursor: pointer;
+    font-size: 1.6rem;
+    text-decoration: none;
+    color: #28b485;
+    border-bottom: 2px solid #28b485;
+    padding: 5px;
+    transition: all .2s;
+    background-color: transparent;
+}
 .btn-text:link, .btn-text:visited{
     font-size: 1.6rem;
     text-decoration: none;
@@ -294,15 +309,18 @@ body{
     border-bottom: 2px solid #28b485;
     padding: 5px;
     transition: all .2s;
+
+ 
 }
-.btn-text:hover{
+.btn-text:hover, .btn-text:focus{
     background-color:#28b485 ;
     color: #fff;
     transform: translateX(-2px);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+    outline:none;
 }
 .btn-text:active{
-   
+    outline:none;
     transform: translateX(-2px);
     box-shadow: 0 1.5rem 1.5rem rgba(0, 0, 0, .5);
 }
@@ -535,7 +553,7 @@ body{
 /* SECTION STORIES */
 .section-stories{ 
     padding: 15rem 0;
-    
+   
     
     
     position: relative;
@@ -609,4 +627,155 @@ body{
     height: 100%;
     width: 100%;
     object-fit: cover;
+}
+
+/*
+SECTION BOOK
+*/
+.section-book{
+    padding: 15rem 0;
+    background-image: linear-gradient( to right bottom,#7ed56f9a, #28b48594 );
+    overflow: hidden;
+}
+.book{
+    background-image:linear-gradient(105deg , rgba(255, 255,255, .7) 0%, rgba(255, 255,255, .7) 50%,  transparent 50% ),url('../img/nat-10.jpg');
+    background-size:100%;
+    height: 50rem;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, .5);
+}
+.book__form{
+    width: 50%;
+    padding: 6rem; 
+}
+
+.u-margin-bottom-medium{
+    margin-bottom: 3rem;
+}
+.form__group{
+    
+}
+.form__group:not(:last-child){
+    margin-bottom: 2rem;
+}
+
+.form__input{
+    font-size: 1.5rem;
+    padding: 1.5rem 2rem;
+    border-radius: 2px;
+    background-color: rgba(255, 255, 255, .2);
+    color: inherit;
+    border: none;
+    font-family: inherit;
+    width: 90%;
+    display:block;
+    border-bottom:3px solid transparent ;
+    transition: all .3s;
+}
+.form__input:focus{
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .5);
+    border-bottom:3px solid #55c57a ;
+}
+.form__input:focus:invalid{
+    border-bottom:3px solid #ff7830dc ;
+}
+.form__input::-webkit-input-placeholder{
+    color: #999;
+}
+.form__label{
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-left: 2rem;
+    margin-top: .7rem;
+    display: block;
+    transition: all .3s;
+}
+.form__input:placeholder-shown + .form__label{
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4rem);
+
+}
+.form__radio-group{
+    float:left;
+    display: inline-block;
+    margin: 0 2rem;
+}
+.form__radio-input{
+    display: none;
+}
+.form__radio-label{
+    font-size: 1.6rem;
+    cursor: pointer;
+    position:relative;
+    padding-left: 4.5rem;
+}
+.form__radio-button{
+    height: 3rem;
+    width: 3rem;
+    border: 5px solid #55c57a;
+    display: inline-block;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    top: -.8;
+}
+.form__radio-button::after{
+    content: "";
+    display: block;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+     transform: translate(-50%, -50%);
+     background-color: #55c57a;
+     opacity: 0;
+     transition: all .3s;
+}
+
+.form__radio-input:checked ~ .form__radio-label .form__radio-button::after{
+    opacity: 1;
+}
+.u-margin-top-small{
+    margin-top: 2rem;
+}
+
+/* footer styles */
+.footer{
+    background-color: #333333;
+    padding: 10rem 0;
+    font-size: 1.4rem;
+}
+.footer__logo-box{
+    text-align: center;
+    margin-bottom: 8rem;
+}
+.footer__logo{
+    width: 15rem;
+}
+.footer__navigation{
+
+}
+
+.footer__list{
+    list-style:none;
+}
+.footer__item{
+    display:inline-block;
+}
+.footer__item:not(:last-child){
+    margin-right:1.5rem;
+}
+.footer__link, .footer__link:visited, .footer__link:link{
+    color: #f7f7f7;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+}
+.footer__link:hover, .footer__link:active{
+    color: #55c57a;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .5);
 }
