--- a/css/styles.css
+++ b/css/styles.css
@@ -779,3 +779,72 @@ SECTION BOOK
     color: #55c57a;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, .5);
 }
+
+/* navigation section */
+.navigation{
+
+}
+.navigation__checkbox{
+    display: none;
+}
+.navigation__button{
+    background-color: #fff;
+    height: 7rem;
+    width: 7rem;
+    position: fixed;
+    top: 6rem;
+    right: 6rem;
+    border-radius: 50%;
+    z-index: 15;
+}
+.navigation__background{
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    position: fixed;
+    top: 6.5rem;
+    right: 6.5rem;
+    background-image: radial-gradient(#7ed56f,  #28b485);
+    z-index: 10;
+    transform: scale(100);
+}
+.navigation__nav{
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index:12;
+}
+.navigation__list{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    list-style-type: none;
+    text-align: center;
+}
+.navigation__item{
+    margin: 1rem;
+}
+.navigation__link:link, .navigation__link:visited{
+    display: inline-block;
+    font-size: 3rem;
+    font-weight: 300;
+    padding: 1rem 2rem;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    background:linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
+    background-size: 230%;
+    transition: all .2s;
+}
+.navigation__link:hover, .navigation__link:active{
+    background-position: 100%;
+    color: #7ed56f;
+    transform: translateX(1rem);
+}
+/* colors:
+light green : #7ed56f
+medium green : #55c57a
+dark green: #28b485 */
