--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@ body{
 }
 .btn--green{
     background-color: #7ed56f9a;
-    color: #777;    
+    color:#fff;    
 }
 
 .btn::after{
@@ -796,6 +796,9 @@ SECTION BOOK
     right: 6rem;
     border-radius: 50%;
     z-index: 15;
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, .5);
+    text-align: center;
+    cursor: pointer;
 }
 .navigation__background{
     height: 6rem;
@@ -806,15 +809,20 @@ SECTION BOOK
     right: 6.5rem;
     background-image: radial-gradient(#7ed56f,  #28b485);
     z-index: 10;
-    transform: scale(100);
+    transition: all .3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+    /* transform: scale(100); */
 }
 .navigation__nav{
     height: 100vh;
-    width: 100vw;
+   
     position: fixed;
     top: 0;
     right: 0;
     z-index:12;
+    opacity: 0;
+    width: 0;
+    transition: all .2s;
+    animation-delay: .3s;
 }
 .navigation__list{
     position: absolute;
@@ -823,6 +831,7 @@ SECTION BOOK
     transform: translate(-50%, -50%);
     list-style-type: none;
     text-align: center;
+    width: 100%;
 }
 .navigation__item{
     margin: 1rem;
@@ -843,6 +852,121 @@ SECTION BOOK
     background-position: 100%;
     color: #7ed56f;
     transform: translateX(1rem);
+}
+.navigation__checkbox:checked ~ .navigation__background{
+    transform: scale(100);
+}
+.navigation__checkbox:checked ~ .navigation__nav{
+   opacity: 1;
+   width: 100vw;
+}
+.navigation__icon{
+    position: relative;
+    margin-top: 3.5rem;
+}
+.navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    width: 3rem;
+    height: 2px;
+    background-color: #333;
+    display: inline-block;
+}
+.navigation__icon::before, .navigation__icon::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    transition: all .2s;
+}
+.navigation__icon::before{
+    top: -.8rem;
+}
+.navigation__icon::after{
+    top: .8rem;
+}
+.navigation__button:hover .navigation__icon::before{
+    top: -1rem;
+}
+.navigation__button:hover .navigation__icon::after{
+    top: 1rem;
+}
+.navigation__checkbox:checked + .navigation__button .navigation__icon{
+   background-color: transparent;
+} 
+.navigation__checkbox:checked + .navigation__button .navigation__icon::before{
+    top: 0;
+    transform: rotate(135deg);
+ }
+ .navigation__checkbox:checked + .navigation__button .navigation__icon::after{
+     top: 0;
+    transform: rotate(-135deg);
+ }
+
+ /* popup */
+.popup{
+    height: 100vh;
+    width: 100%;
+    
+    top:0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .8);
+    z-index: 3000;
+   
+    position: fixed;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+}
+.popup:target{
+    opacity: 1;
+    visibility: visible;
+}
+.popup__content{
+   width: 75%;
+   
+   background-color: #fff;
+   box-shadow: 0 2rem 4rem rgba(0, 0, 0, .2);
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   border-radius: 3px;
+   display: table;
+   overflow: hidden;
+  
+}
+.popup__left{
+    width: 33.3333%;
+    float: left;
+    display: table-cell;
+}
+.popup__right{
+    width: 66.6667%;
+    float: left;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem;
+}
+.popup__img{
+    display: block;
+    width: 100%;
+}
+.popup__text{
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    hyphens: auto;
+}
+.popup__close{
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+}
+.popup__close:link, .popup__close:visited{
+    color: #333;
+    text-decoration: none;
+    display: inline-block;
+
+}
+.popup__close:hover{
+    color: green;
 }
 /* colors:
 light green : #7ed56f
